<resources>
    <string name="app_name">Music App</string>
    <string name="training_mode">Training mode</string>
    <string name="button_back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_play">Play</string>
    <string name="button_example">Example</string>
    <string name="metronome">Metronome</string>
    <string name="set_rate">Enter Rate</string>
    <string name="stop">Stop</string>
    <string name="button_practice">Practice</string>
    <string name="record">Record</string>
    <string name="record_mode">Record Mode</string>
    <string name="replay">Replay</string>
    <string name="recording">Recording</string>
    <string name="save">Save</string>
    <string name="Data">Data</string>
    <string name="record_name">Record Name</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="delete">Delete</string>
    <string name="alert">Delete all record track?</string>
    <string name="yes">Yes</string>
    <string name="chooseTrack">Choose a Track</string>
    <string name="save_check">Do you want to save the track?</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="sunnyday">Sunny Day</string>
    <string name="canon">Canon</string>
    <string name="welcome">Welcome</string>
    <string name="freeMode">Free Mode</string>
    <string name="exit">Exit?</string>
</resources>
