<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Button_welcome_free_mode"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/freeMode"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/Button_welcome_training_mode"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_welcome" />

    <Button
        android:id="@+id/Button_welcome_training_mode"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/training_mode"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button_welcome_free_mode"
        app:layout_constraintTop_toBottomOf="@id/textview_welcome" />

    <Button
        android:id="@+id/Button_welcome_record_mode"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/record_mode"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/Button_welcome_back"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_welcome_free_mode" />

    <Button
        android:id="@+id/Button_welcome_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_back"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/Button_welcome_record_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button_welcome_record_mode"
        app:layout_constraintTop_toTopOf="@+id/Button_welcome_record_mode" />


</android.support.constraint.ConstraintLayout>