<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/recording_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/recording_dot"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/recording_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/recording"
            android:gravity="center_vertical"/>

    </LinearLayout>



    <Button
        android:id="@+id/Button_Record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/record"/>

    <Button
        android:id="@+id/Button_1_record"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_shape_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_2_record"
        app:layout_constraintTop_toBottomOf="@+id/Button_2_record" />

    <Button
        android:id="@+id/Button_2_record"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/round_shape_button"
        app:layout_constraintEnd_toStartOf="@+id/Button_3_record"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Button_3_record"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/round_shape_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Button_4_record"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_shape_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Button_3_record"
        app:layout_constraintTop_toBottomOf="@+id/Button_3_record" />

    <Button
        android:id="@+id/Button_record_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/button_back"/>

    <Button
        android:id="@+id/Button_replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Button_Record"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/replay"/>

    <Button
        android:id="@+id/Button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Button_replay"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/save"/>

    <Button
        android:id="@+id/Button_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Button_save"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/Data"/>

    <Button
        android:id="@+id/Button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Button_data"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/delete"/>


</android.support.constraint.ConstraintLayout>
