<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Button_metronome"
        android:text="@string/metronome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#3b97ff"/>

    <EditText
        android:id="@+id/EditText_metronome_tempo"
        android:hint="@string/set_rate"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/Button_metronome"
        android:layout_marginTop="15dp"/>


    <Button
        android:id="@+id/Button_1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_2"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"/>

    <Button
        android:id="@+id/Button_2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="120dp"/>

    <Button
        android:id="@+id/Button_3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="120dp" />

    <Button
        android:id="@+id/Button_4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Button_3"
        app:layout_constraintTop_toBottomOf="@+id/Button_3"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp" />

    <Button
        android:id="@+id/Button_training_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_mode"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"/>

</android.support.constraint.ConstraintLayout>