<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Button_play_sound"
        android:text="@string/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#3b97ff"/>

    <Button
        android:id="@+id/Button_example"
        android:text="@string/button_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/Button_play_sound"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#2eca2e"/>


    <Button
        android:id="@+id/Button_1_training"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_2_training"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_2_training"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"/>

    <Button
        android:id="@+id/Button_2_training"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="120dp"/>

    <Button
        android:id="@+id/Button_3_training"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="120dp" />

    <Button
        android:id="@+id/Button_4_training"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Button_3_training"
        app:layout_constraintTop_toBottomOf="@+id/Button_3_training"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp" />

    <Button
        android:id="@+id/Button_back__training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"/>

</android.support.constraint.ConstraintLayout>